# libtguy_js

./: CMakeLists.txt  README.md  libtguy.js
.github/workflows/: release_build.yml
cmake/: GetVersionFromFile.cmake
